--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
             </tr>
             <tr>
               <td class="source fixed-column" height="36">
-                <p>&nbsp;<img src="967225.png" alt="" style="width: 256px; height: 144px;"></p>
+                <p>&nbsp;<img src="967225.png" alt="" style="width: 329px; height: 185px;"></p>
                 <p>&nbsp;</p>
               </td>
               <td class="codec-aac" height="36">&nbsp;<audio src="http://ckrw.streamon.fm:8000/CKRW-32k.aac"
@@ -805,20 +805,20 @@
             </tr>
             <tr>
               <td class="source fixed-column" height="36">
-                <p>&nbsp;<img src="krock1023hero.png" alt=""></p>
+                <p>&nbsp;<img src="krock1023hero.png" alt="" style="width: 259px; height: 217px;"></p>
                 <p>&nbsp;</p>
               </td>
               <td class="codec-aac" height="36">&nbsp;<audio src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKXGFM"
                   preload="none" controls="controls"></audio></td>
               <td class="codec-aac" height="36">&nbsp;</td>
-              <td class="codec-aac">&nbsp;<img src="krock987hero.png" alt=""></td>
+              <td class="codec-aac">&nbsp;<img src="krock987hero.png" alt="" style="width: 249px; height: 212px;"></td>
               <td class="codec-aac">&nbsp;<audio src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKXDFM"
                   preload="none" controls="controls"></audio></td>
               <td class="codec-aac">&nbsp;</td>
             </tr>
             <tr>
               <td class="source fixed-column" height="36">
-                <p>&nbsp;<img src="1039hero.png" alt=""></p>
+                <p>&nbsp;<img src="1039hero.png" alt="" style="width: 272px; height: 233px;"></p>
                 <p>&nbsp;</p>
               </td>
               <td class="codec-aac" height="36">&nbsp;
@@ -832,7 +832,8 @@
                 </table>
               </td>
               <td class="codec-aac" height="36">&nbsp;</td>
-              <td class="codec-aac">&nbsp;<img src="FLOW_93-5_Logo_2019.png" alt=""></td>
+              <td class="codec-aac">&nbsp;<img src="FLOW_93-5_Logo_2019.png" alt=""
+                  style="width: 157px; height: 215px;"></td>
               <td class="codec-aac">&nbsp;
                 <table>
                   <tbody>
