--- a/OLD.html
+++ b/OLD.html
@@ -44,7 +44,7 @@
               </th>
             </tr>
             <tr class="nohover">
-              <th><br>
+              <th><img src="Untitled-1.png" alt="" style="width: 379px; height: 66px;"><br>
               </th>
               <th><br>
               </th>
