xhange logo size

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body {
           <tbody>
             <tr>
               <td class="source fixed-column">
-                <p><img src="logog.png" alt="" style="width: 246px; height: 165px;"></p>
+                <p><img src="logog.png" alt="" style="width: 299px; height: 200px;"></p>
                 <p>&nbsp;</p>
               </td>
               <td class="codec-aac"><audio preload="none" controls="controls"> <source
@@ -99,7 +99,7 @@ body {
                   <source src="https://lax-master1-entry2.leanstream-hd.com:2113/CKNXAM-2">
                 </audio></td>
               <td class="codec-aac" style="height: 237.5px; width: 357px;">
-                <p><img src="kiss925.png" alt="" style="width: 192px; height: 160px;"
+                <p><img src="kiss925.png" alt="" style="width: 250px; height: 209px;"
                     id="6665"></p>
                 <p>&nbsp;</p>
               </td>
@@ -464,7 +464,7 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" height="36">
-                <p><img src="fbShare%20%284%29.png" alt="" style="width: 230px; height: 112px;"></p>
+                <p><img src="fbShare%20%284%29.png" alt="" style="width: 300px; height: 146px;"></p>
                 <p>&nbsp;</p>
               </td>
               <td class="codec-aac" height="36"><audio preload="none" controls="controls">
@@ -478,7 +478,7 @@ body {
                   <source src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CJMEAM-MP3-2">
                 </audio></td>
               <td class="codec-aac">
-                <p><img src="rewind893_stingrayradio-240x182-logo.png" alt="" style="width: 212px; height: 161px;"></p>
+                <p><img src="rewind893_stingrayradio-240x182-logo.png" alt="" style="width: 280px; height: 212px;"></p>
                 <p>&nbsp;</p>
               </td>
               <td class="codec-aac"><audio preload="none" controls="controls"> <source
@@ -490,7 +490,7 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" height="36">
-                <p><img src="fbShare.png" alt="" height="111" width="274"></p>
+                <p><img src="fbShare.png" alt="" style="width: 372px; height: 151px;"></p>
                 <p>&nbsp;</p>
               </td>
               <td class="codec-aac" height="36"><audio preload="none" controls="controls">
@@ -504,7 +504,7 @@ body {
                   <source src="https://lax-master1-entry2.leanstream-hd.com:2113/VOCMAM-2">
                 </audio></td>
               <td class="codec-aac">
-                <p><img src="RC910weblogo_350x350.png" alt="" style="width: 185px; height: 201px;"></p>
+                <p><img src="RC910weblogo_350x350.png" alt="" style="width: 223px; height: 242px;"></p>
                 <p>&nbsp;</p>
               </td>
               <td class="codec-aac"><audio preload="none" controls="controls"> <source
@@ -516,7 +516,7 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" height="36">
-                <p><img src="hot%27.png" alt="" style="width: 218px; height: 191px;"></p>
+                <p><img src="hot%27.png" alt="" style="width: 270px; height: 236px;"></p>
                 <p>&nbsp;</p>
               </td>
               <td class="codec-aac" height="36"><audio preload="none" controls="controls">
@@ -530,7 +530,7 @@ body {
                   <source src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKIXFM-MP3-2">
                 </audio></td>
               <td class="codec-aac">
-                <p><img src="radio-nl-logo.png" alt="" style="width: 261px; height: 199px;"></p>
+                <p><img src="radio-nl-logo.png" alt="" style="width: 308px; height: 235px;"></p>
                 <p>&nbsp;</p>
               </td>
               <td class="codec-aac"><audio preload="none" controls="controls"> <source
@@ -543,7 +543,7 @@ body {
             <tr>
               <td class="source fixed-column" height="36">
                 <p><img src="krock975defaultalbumlogo350x350.1585845453.png" alt=""
-                    height="226" width="254"></p>
+                    style="width: 321px; height: 285px;"></p>
                 <p>&nbsp;</p>
               </td>
               <td class="codec-aac" height="36"><audio preload="none" controls="controls">
@@ -695,7 +695,7 @@ body {
                   <source src="https://rogers-hls.leanstream.co/rogers/for933.stream/icy?environment=tunein&amp;args=tunein_01">
                 </audio></td>
               <td class="codec-aac" height="36">&nbsp;</td>
-              <td class="codec-aac"><img src="fbShare%20%287%29.png" alt="" style="width: 336px; height: 151px;"></td>
+              <td class="codec-aac"><img src="fbShare%20%287%29.png" alt="" style="width: 380px; height: 171px;"></td>
               <td class="codec-aac"><audio preload="none" controls="controls"> <source
                     src="https://rogers-hls.leanstream.co/rogers/for933.stream/icy?environment=tunein&amp;args=tunein_01">
                   <source src="https://rogers-hls.leanstream.co/rogers/for933.stream/icy?environment=tunein&amp;args=tunein_01">
@@ -775,7 +775,7 @@ body {
               <td class="codec-aac" height="36">&nbsp;<audio src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKNWAM"
                   preload="none" controls="controls"></audio></td>
               <td class="codec-aac" height="36">&nbsp;</td>
-              <td class="codec-aac">&nbsp;<img src="radio_cjad.png" alt="" style="width: 151px; height: 161px;"></td>
+              <td class="codec-aac">&nbsp;<img src="radio_cjad.png" alt="" style="width: 177px; height: 188px;"></td>
               <td class="codec-aac">&nbsp;<audio src="https://18123.live.streamtheworld.com/CJADAM_SC?DIST=TuneIn&amp;TGT=TuneIn&amp;maxServers=2&amp;gdpr=0&amp;us_privacy=1YNY&amp;partnertok=eyJhbGciOiJIUzI1NiIsImtpZCI6InR1bmVpbiIsInR5cCI6IkpXVCJ9.eyJ0cnVzdGVkX3BhcnRuZXIiOnRydWUsImlhdCI6MTYyNTU3NTQ3NCwiaXNzIjoidGlzcnYifQ._ic2T_F-17zOpNT3hkIuvsQWbJkknrK2fevomNW4aT0"
                   preload="none" controls="controls"></audio></td>
               <td class="codec-aac">&nbsp;</td>
