--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@ body {
 
 #body {
   background-color: #929291;
-  background-image: url("paper-1468883_1920.jpg");
+  background-image: url("bg-body.jpg");
   background-attachment: fixed;
   background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-size: auto auto;
+  background-repeat: repeat;
 }
 
 #topstuff {
@@ -32,9 +32,13 @@ body {
   float: none;
 }
 
+#table {
+  table-layout: auto;
+}
+
 </style> </head>
   <body id="body">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <img src="Untitled-1.png" alt="" style="width: 647px; height: 111px;" id="topstuff">
+    <br>
     <div class="table-inner">
       <div style="float:left;">
         <table>
@@ -44,9 +48,9 @@ body {
           </thead>
         </table>
         <h1></h1>
-        <table border="0">
+        <table id="table" border="0">
           <thead>
-            <tr class="nohover">
+            <tr class="center">
               <th><br>
               </th>
               <th><br>
@@ -60,7 +64,7 @@ body {
               <th><br>
               </th>
             </tr>
-            <tr class="nohover">
+            <tr class="center">
               <th><br>
               </th>
               <th><br>
@@ -159,20 +163,19 @@ body {
               <td class="codec-aac">&nbsp;</td>
             </tr>
             <tr>
-              <td class="source fixed-column" height="36">
+              <td class="source fixed-column">
                 <p><img src="1270cjcb.png" alt="" style="width: 213px; height: 123px;"></p>
                 <p>&nbsp;</p>
               </td>
-              <td class="codec-aac" height="36"><audio preload="none" controls="controls">
-                  <source src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CJCBAM-MP3"
+              <td class="codec-aac"><audio preload="none" controls="controls"> <source
+                    src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CJCBAM-MP3"
                     type="audio/"> <source src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CJCBAM-MP3">
                 </audio></td>
-              <td class="codec-aac" height="36"><audio preload="none"> <source
-                    src="https://lax-master1-entry2.leanstream-hd.com:2113/CJCBAM-MP3"
+              <td class="codec-aac"><audio preload="none"> <source src="https://lax-master1-entry2.leanstream-hd.com:2113/CJCBAM-MP3"
                     type="audio/"> <source src="https://lax-master1-entry2.leanstream-hd.com:2113/CJCBAM-MP3">
                   <source src="https://lax-master1-entry2.leanstream-hd.com:2113/CJCBAM-MP3">
                 </audio></td>
-              <td class="codec-aac">
+              <td class="codec-aac" style="height: 195.5px;">
                 <p><img src="CJCW_590_logo.png" alt="" style="width: 252px; height: 121px;"></p>
                 <p>&nbsp;</p>
               </td>
@@ -188,7 +191,7 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" height="36"><img src="New_AVR_Long.png"
-                  alt="" style="width: 255px; height: 117px;"><br>
+                  alt="" style="width: 303px; height: 139px;"><br>
                 <p>&nbsp;</p>
               </td>
               <td class="codec-aac" height="36"><audio preload="none" controls="controls">
@@ -769,13 +772,13 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" height="36">
-                <p>&nbsp;<img src="logo_radio_vancouver_980.png" alt="" style="width: 324px; height: 162px;"></p>
+                <p>&nbsp;<img src="logo_radio_vancouver_980.png" alt="" style="width: 358px; height: 179px;"></p>
                 <p>&nbsp;</p>
               </td>
               <td class="codec-aac" height="36">&nbsp;<audio src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKNWAM"
                   preload="none" controls="controls"></audio></td>
               <td class="codec-aac" height="36">&nbsp;</td>
-              <td class="codec-aac">&nbsp;<img src="radio_cjad.png" alt="" style="width: 177px; height: 188px;"></td>
+              <td class="codec-aac">&nbsp;<img src="radio_cjad.png" alt="" style="width: 248px; height: 263px;"></td>
               <td class="codec-aac">&nbsp;<audio src="https://18123.live.streamtheworld.com/CJADAM_SC?DIST=TuneIn&amp;TGT=TuneIn&amp;maxServers=2&amp;gdpr=0&amp;us_privacy=1YNY&amp;partnertok=eyJhbGciOiJIUzI1NiIsImtpZCI6InR1bmVpbiIsInR5cCI6IkpXVCJ9.eyJ0cnVzdGVkX3BhcnRuZXIiOnRydWUsImlhdCI6MTYyNTU3NTQ3NCwiaXNzIjoidGlzcnYifQ._ic2T_F-17zOpNT3hkIuvsQWbJkknrK2fevomNW4aT0"
                   preload="none" controls="controls"></audio></td>
               <td class="codec-aac">&nbsp;</td>
