--- a/index.html
+++ b/index.html
@@ -838,6 +838,7 @@ body {
               <td class="source fixed-column" height="36">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <img src="svg/News957_600x600.svg" style="width: 207px; height: 171px;"><br>
                 <br>
+                <br>
               </td>
               <td class="codec-aac" height="36">&nbsp;
                 <table id="table" border="0">
@@ -855,6 +856,8 @@ body {
             <tr>
               <td class="source fixed-column" height="36">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <img src="svg/cjyq.svg" style="width: 279px; height: 234px;"><br>
+                <br>
+                <br>
               </td>
               <td class="codec-aac" height="36">
                 <table id="table" border="0">
@@ -873,6 +876,7 @@ body {
             <tr>
               <td class="source fixed-column" height="36">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <img src="svg/Newstalk_1010.svg" style="width: 223px; height: 130px;"><br>
+                <br>
               </td>
               <td class="codec-aac" height="36">
                 <table id="table" border="0">
@@ -890,7 +894,8 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" height="36">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="svg/q104_stingrayradio-240x182-logo.svg" style="width: 222px; height: 168px;"></td>
+                <img src="svg/q104_stingrayradio-240x182-logo.svg" style="width: 222px; height: 168px;"><br>
+              </td>
               <td class="codec-aac" height="36">
                 <table id="table" border="0">
                   <tbody>
@@ -907,7 +912,8 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" height="36">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="svg/radio_am580.svg" height="108" width="269"></td>
+                <img src="svg/radio_am580.svg" height="108" width="269"><br>
+              </td>
               <td class="codec-aac" height="36">
                 <table id="table" border="0">
                   <tbody>
@@ -995,7 +1001,9 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" height="36">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="svg/VOWR.svg" style="width: 210px; height: 210px;"></td>
+                <img src="svg/VOWR.svg" style="width: 210px; height: 210px;"><br>
+                <br>
+              </td>
               <td class="codec-aac" height="36">&nbsp;
                 <table id="table" border="0">
                   <tbody>
@@ -1011,7 +1019,10 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" height="36">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="svg/Citynews-radio_ottawa.svg.svg" style="width: 275px; height: 99px;"></td>
+                <img src="svg/Citynews-radio_ottawa.svg.svg" style="width: 275px; height: 99px;"><br>
+                <br>
+                <br>
+              </td>
               <td class="codec-aac" height="36">&nbsp;
                 <table id="table" border="0">
                   <tbody>
@@ -1027,7 +1038,10 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" height="36">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="svg/rbi_logo_big.svg" style="width: 257px; height: 144px;"></td>
+                <img src="svg/rbi_logo_big.svg" style="width: 257px; height: 144px;"><br>
+                <br>
+                <br>
+              </td>
               <td class="codec-aac" height="36">&nbsp;
                 <table id="table" border="0">
                   <tbody>
@@ -1042,7 +1056,9 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" height="36">&nbsp; &nbsp;
-                &nbsp;&nbsp; <img src="svg/breeze963.svg" style="width: 285px; height: 134px;"></td>
+                &nbsp;&nbsp; <img src="svg/breeze963.svg" style="width: 285px; height: 134px;"><br>
+                <br>
+              </td>
               <td class="codec-aac" height="36">&nbsp;
                 <table id="table" border="0">
                   <tbody>
@@ -1057,7 +1073,10 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" height="36">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="svg/CFSX870_localnewsnow_logo.svg" height="103" width="236"></td>
+                <img src="svg/CFSX870_localnewsnow_logo.svg" height="103" width="236"><br>
+                <br>
+                <br>
+              </td>
               <td class="codec-aac" height="36">&nbsp;
                 <table id="table" border="0">
                   <tbody>
@@ -1073,7 +1092,10 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" height="36">&nbsp;<img src="svg/CFCB_VOAM_Radio_Logo.svg"
-                  height="116" width="313"></td>
+                  height="116" width="313"><br>
+                <br>
+                <br>
+              </td>
               <td class="codec-aac" height="36">&nbsp;
                 <table id="table" border="0">
                   <tbody>
@@ -1089,7 +1111,9 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" height="36">&nbsp; <img src="svg/bigland.svg"
-                  height="107" width="291"></td>
+                  height="107" width="291"><br>
+                <br>
+              </td>
               <td class="codec-aac" height="36">&nbsp;
                 <table id="table" border="0">
                   <tbody>
@@ -1105,7 +1129,9 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" height="36">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="svg/CHFI.svg" style="width: 191px; height: 179px;"></td>
+                <img src="svg/CHFI.svg" style="width: 191px; height: 179px;"><br>
+                <br>
+              </td>
               <td class="codec-aac" height="36">&nbsp;
                 <table id="table" border="0">
                   <tbody>
@@ -1120,8 +1146,8 @@ body {
               <td class="codec-aac" height="36">&nbsp;</td>
             </tr>
             <tr>
-              <td class="source fixed-column" height="36">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="svg/99.9_Virgin_Radio_.svg" style="width: 182px; height: 171px;"></td>
+              <td class="source fixed-column" height="36">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <img src="svg/99.9_Virgin_Radio_.svg" style="width: 228px; height: 214px;"></td>
               <td class="codec-aac" height="36">
                 <table id="table" border="0">
                   <tbody>
@@ -1173,7 +1199,10 @@ body {
               </td>
             </tr>
             <tr>
-              <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="svg/am1140.svg" style="width: 303px; height: 94px;"></td>
+              <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="svg/am1140.svg" style="width: 329px; height: 102px;"><br>
+                <br>
+                <br>
+              </td>
               <td>
                 <table id="table" border="0">
                   <tbody>
@@ -1190,7 +1219,8 @@ body {
             </tr>
             <tr>
               <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="svg/CKLW_AM.svg" style="width: 260px; height: 98px;"><br>
+                <img src="svg/CKLW_AM.svg" style="width: 282px; height: 106px;"><br>
+                <br>
                 <br>
                 <br>
               </td>
@@ -1210,7 +1240,9 @@ body {
             </tr>
             <tr>
               <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="svg/kiss925.svg"
-                  style="width: 313px; height: 262px;" id="6665"></td>
+                  style="width: 313px; height: 262px;" id="6665"><br>
+                <br>
+              </td>
               <td>
                 <table id="table" border="0">
                   <tbody>
@@ -1227,6 +1259,7 @@ body {
             </tr>
             <tr>
               <td><img src="svg/WOLF-Logo-3-White-with-transparent.svg" alt=""><br>
+                <br>
                 <br>
                 <br>
               </td>
@@ -1256,7 +1289,10 @@ body {
             </tr>
             <tr>
               <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="svg/s12373g.svg"
-                  alt="" style="width: 312px; height: 190px;"></td>
+                  alt="" style="width: 312px; height: 190px;"><br>
+                <br>
+                <br>
+              </td>
               <td><audio src="https://mbsradio.leanstream.co/CJRWFM-MP3?args=tunein_01"
                   preload="none" controls="controls"></audio><br>
               </td>
@@ -1283,7 +1319,10 @@ body {
             </tr>
             <tr>
               <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="svg/fbShare%20%289%29.svg"
-                  alt="" style="width: 326px; height: 171px;"></td>
+                  alt="" style="width: 326px; height: 171px;"><br>
+                <br>
+                <br>
+              </td>
               <td><audio src="https://ais-sa1.streamon.fm/7738_128k.aac" preload="none"
                   controls="controls"></audio><br>
               </td>
@@ -1292,7 +1331,10 @@ body {
             </tr>
             <tr>
               <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="svg/fbShare%20%2810%29.svg"
-                  alt="" style="width: 336px; height: 176px;"></td>
+                  alt="" style="width: 336px; height: 176px;"><br>
+                <br>
+                <br>
+              </td>
               <td><audio src="https://icy.jpbgdigital.com/CIBW.aac?player_type=tunein"
                   preload="none" controls="controls"></audio><br>
               </td>
@@ -1301,6 +1343,7 @@ body {
             </tr>
             <tr>
               <td><img src="svg/fbShare13151.svg" alt="" style="width: 385px; height: 202px;"><br>
+                <br>
                 <br>
                 <br>
               </td>
@@ -1313,6 +1356,7 @@ body {
             <tr>
               <td><img src="svg/Fox-FM-MultiMedia-Logo-For-Dark-Backgrounds.svg"
                   alt="" style="width: 365px; height: 205px;"><br>
+                <br>
                 <br>
                 <br>
               </td>
