--- a/index.html
+++ b/index.html
@@ -1405,7 +1405,9 @@ body {
             </tr>
             <tr>
               <td>&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; <img src="svg/coast.svg"
-                  alt="" style="width: 280px; height: 155px;"></td>
+                  alt="" style="width: 280px; height: 155px;"><br>
+                <br>
+              </td>
               <td><audio src="https://canada1.reliastream.com/proxy/coastbr1?mp=/stream"
                   preload="none" controls="controls"></audio><br>
               </td>
@@ -1413,9 +1415,11 @@ body {
               </td>
             </tr>
             <tr>
-              <td><br>
+              <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="svg/CNN.svg"
+                  alt="" style="width: 267px; height: 124px;"><br>
               </td>
-              <td><br>
+              <td><audio src="https://tunein.streamguys1.com/cnn-new?ads.cust_params=partnerId%253dydvgH5BP%2526ads_partner_alias%253dydvgH5BP%2526premium%253dfalse%2526abtest%253d%2526language%253den-US%2526stationId%253ds20407%2526is_ondemand%253dfalse%2526genre_id%253dg3124%2526class%253dtalk%25252cspoken%25252cnews%2526is_family%253dfalse%2526is_mature%253dfalse%2526country_region_id%253d227%2526station_language%253denglish%2526programId%253dp287806%2526is_event%253dfalse&amp;url=https%3a%2f%2ftunein.com%2fdesc%2fs20407%2f&amp;description_url=https%3a%2f%2ftunein.com%2fdesc%2fs20407%2f&amp;ads.npa=1&amp;ads.gdfp_req=1&amp;aw_0_1st.playerid=ydvgH5BP&amp;aw_0_1st.skey=1626202301&amp;aw_0_1st.platform=tunein"
+                  preload="none" controls="controls"></audio><br>
               </td>
               <td><br>
               </td>
