--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ body {
               <td class="source fixed-column">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <img src="svg/cknx1.svg"
                   style="width: 240px; height: 240px;"> </td>
-              <td class="codec-aac"><audio preload="none" controls="controls"> <source
-                    src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKNXAM"
+              <td class="codec-aac"><audio preload="none" controls="controls" src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKNXAM">
+                  <source src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKNXAM"
                     type="audio/"> <source src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKNXAM">
                   <source src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKNXAM">
                 </audio></td>
@@ -108,12 +108,12 @@ body {
             </tr>
             <tr>
               <td class="source fixed-column" style="height: 195.5px;">
-                <p>&nbsp;&nbsp;&nbsp;&nbsp; <img src="svg/CKNB_Radio_Logo.svg"
-                    style="width: 289px; height: 123px;"></p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  <img src="svg/chokfm.svg" alt="" style="width: 259px; height: 158px;"></p>
                 <p>&nbsp;</p>
               </td>
-              <td class="codec-aac"><audio preload="none" controls="controls"> <source
-                    src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKNBAM-MP3"
+              <td class="codec-aac"><audio preload="none" controls="controls" src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CHOKAM">
+                  <source src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKNBAM-MP3"
                     type="audio/"> <source src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKNBAM-MP3">
                 </audio></td>
               <td class="codec-aac">&nbsp;</td>
@@ -134,11 +134,12 @@ body {
                 </audio></td>
             </tr>
             <tr>
-              <td class="source fixed-column" height="36">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="svg/AVR.svg" style="width: 303px; height: 139px;"><br>
+              <td class="source fixed-column" height="36">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <img src="svg/cfcofm.svg" alt="" style="width: 256px; height: 169px;"><br>
                 <p>&nbsp;</p>
               </td>
-              <td class="codec-aac" height="36"><audio preload="none" controls="controls">
+              <td class="codec-aac" height="36"><audio preload="none" controls="controls"
+                  src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CFCOFM">
                   <source src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKENFM-MP3"
                     type="audio/"> <source src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKENFM-MP3">
                   <source src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKENFM-MP3">
@@ -1407,6 +1408,9 @@ body {
               <td>&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; <img src="svg/coast.svg"
                   alt="" style="width: 280px; height: 155px;"><br>
                 <br>
+                <br>
+                <br>
+                <br>
               </td>
               <td><audio src="https://canada1.reliastream.com/proxy/coastbr1?mp=/stream"
                   preload="none" controls="controls"></audio><br>
@@ -1417,6 +1421,9 @@ body {
             <tr>
               <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="svg/CNN.svg"
                   alt="" style="width: 267px; height: 124px;"><br>
+                <br>
+                <br>
+                <br>
               </td>
               <td><audio src="https://tunein.streamguys1.com/cnn-new?ads.cust_params=partnerId%253dydvgH5BP%2526ads_partner_alias%253dydvgH5BP%2526premium%253dfalse%2526abtest%253d%2526language%253den-US%2526stationId%253ds20407%2526is_ondemand%253dfalse%2526genre_id%253dg3124%2526class%253dtalk%25252cspoken%25252cnews%2526is_family%253dfalse%2526is_mature%253dfalse%2526country_region_id%253d227%2526station_language%253denglish%2526programId%253dp287806%2526is_event%253dfalse&amp;url=https%3a%2f%2ftunein.com%2fdesc%2fs20407%2f&amp;description_url=https%3a%2f%2ftunein.com%2fdesc%2fs20407%2f&amp;ads.npa=1&amp;ads.gdfp_req=1&amp;aw_0_1st.playerid=ydvgH5BP&amp;aw_0_1st.skey=1626202301&amp;aw_0_1st.platform=tunein"
                   preload="none" controls="controls"></audio><br>
@@ -1425,41 +1432,53 @@ body {
               </td>
             </tr>
             <tr>
-              <td><br>
+              <td><img src="svg/1200px-CKNB_Radio_Logo.svg.svg" alt="" style="width: 308px; height: 154px;"><br>
+                <br>
+                <br>
               </td>
-              <td><br>
-              </td>
-              <td><br>
-              </td>
-            </tr>
-            <tr>
-              <td><br>
-              </td>
-              <td><br>
+              <td><audio src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKNBAM-MP3"
+                  preload="none" controls="controls"></audio><br>
               </td>
               <td><br>
               </td>
             </tr>
             <tr>
-              <td><br>
+              <td><img src="svg/AVR.svg" alt="" style="width: 311px; height: 143px;"><br>
+                <br>
+                <br>
               </td>
-              <td><br>
-              </td>
-              <td><br>
-              </td>
-            </tr>
-            <tr>
-              <td><br>
-              </td>
-              <td><br>
+              <td><audio src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CKENFM-MP3"
+                  preload="none" controls="controls"></audio><br>
               </td>
               <td><br>
               </td>
             </tr>
             <tr>
-              <td><br>
+              <td><img src="PNG/800chab.png" alt="" style="width: 354px; height: 101px;"><br>
+                <br>
+                <br>
+              </td>
+              <td><audio src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CHABAM"
+                  preload="none" controls="controls"></audio><br>
               </td>
               <td><br>
+              </td>
+            </tr>
+            <tr>
+              <td><img src="PNG/cfos.png" alt="" style="width: 372px; height: 162px;"><br>
+                <br>
+              </td>
+              <td><audio src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CFOSAM"
+                  preload="none" controls="controls"></audio><br>
+              </td>
+              <td><br>
+              </td>
+            </tr>
+            <tr>
+              <td><img src="PNG/CJOY.png" alt="" style="width: 317px; height: 212px;"><br>
+              </td>
+              <td><audio src="https://nyc-edge1-entry1.leanstream-hd.com:2113/CJOYAM"
+                  preload="none" controls="controls"></audio><br>
               </td>
               <td><br>
               </td>
